# whitespacepy

./: .gitignore  README.md  pyproject.toml  specification.md
docs/source/: conf.py  index.rst  specification.rst
whitespacepy/: constants.py
