[tool.poetry]
name = "whitespacepy"
version = "0.1.0"
description = ""
authors = ["Ivan Hribernik <cihribernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.7"
pylance = "^0.8.0"
black = "^23.9.1"
flake8 = "^6.1.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
